<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlunoFragment">

    <EditText
        android:id="@+id/etNomeA"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:hint="@string/et_nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etEmailAluno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etRa" />

    <Button
        android:id="@+id/btInnserirA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="17dp"
        android:text="@string/bt_inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirA"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarA"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmailAluno"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:importantForAutofill="no"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnModificarA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRa"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/btnExcluirA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/bt_excluir"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/btInnserirA" />

    <Button
        android:id="@+id/btnListarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/bt_listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarA"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarA" />

    <Button
        android:id="@+id/btnModificarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:text="@string/bt_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btInnserirA"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/bt_buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/etRa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etRa" />

    <EditText
        android:id="@+id/etRa"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/et_ra"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvListarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnListarA"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/menu_aluno"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etRa"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>