<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AluguelFragment">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="671dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_aluguel"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etDevolucao"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/et_devolucao"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColorHint="@color/black" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etRetirada"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/et_retirada"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColorHint="@color/black" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spExemplar"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Spinner
                android:id="@+id/spAluno"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btInserirAlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_inserir" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btModificarAlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_modificar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btExcluirAlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_excluir" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btBuscarAlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_buscar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btListarAlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_listar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="215dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>